libgdm: Handle GDM_SUPPORTED_SESSION_TYPES being unset

If GDM_SUPPORTED_SESSION_TYPES is not set in the environment, calling
any libgdm function which internally calls collect_sessions() will log a
CRITICAL from trying to g_strsplit() a NULL string. This may happen if,
for example, a developer is launching gnome-shell directly, rather than
it being launched by GDM.

Don't try to split the NULL string.  The rest of collect_sessions()
already gracefully handles supported_session_types being NULL, so no
further changes are needed to the function.

Fixes: https://gitlab.gnome.org/GNOME/gdm/-/issues/748